--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sepiariver/unique-set": "^1.1.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,9 +16,11 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.8.2",
+    "react-schemaorg": "^2.0.0",
     "react-scripts": "^5.0.1",
     "react-search-autocomplete": "^8.3.2",
     "react-simple-star-rating": "^5.1.7",
+    "schema-dts": "^1.1.2",
     "serve": "^14.2.0",
     "web-vitals": "^2.1.4"
   },
