--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-structured-data": "^3.0.0",
     "react-icons": "^4.8.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.8.2",
-    "react-schemaorg": "^2.0.0",
     "react-scripts": "^5.0.1",
     "react-search-autocomplete": "^8.3.2",
     "react-simple-star-rating": "^5.1.7",
-    "schema-dts": "^1.1.2",
     "serve": "^14.2.0",
     "web-vitals": "^2.1.4"
   },
