--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-structured-data": "^3.0.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-pro-sidebar": "^1.0.0",
