--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-google-structured-data": "^3.0.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
