--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@thirtymadison/react-snap": "github:ThirtyMadison/react-snap",
     "bootstrap": "^5.2.3",
+    "puppeteer": "^19.9.0",
+    "puppeteer-prerender": "^0.14.0",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -45,5 +48,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "storyscope"
+
 }
