--- a/package.json
+++ b/package.json
@@ -7,11 +7,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@thirtymadison/react-snap": "github:ThirtyMadison/react-snap",
     "bootstrap": "^5.2.3",
-    "puppeteer": "^19.9.0",
-    "puppeteer-prerender": "^0.14.0",
-    "pure-react-carousel": "^1.30.1",
+    "next": "^13.3.0",
+    "node-fetch": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
@@ -19,17 +17,14 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-pro-sidebar": "^1.0.0",
-    "react-router-dom": "^6.8.2",
-    "react-scripts": "^5.0.1",
     "react-simple-star-rating": "^5.1.7",
     "serve": "^14.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "eslintConfig": {
     "extends": [
@@ -49,5 +44,4 @@
       "last 1 safari version"
     ]
   }
-
 }
