no city change when category changes

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-pro-sidebar": "^1.0.0",
     "react-simple-star-rating": "^5.1.7",
     "serve": "^14.2.0",
+    "slugify": "^1.6.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
